# harmonydagger

./: .gitignore  Dockerfile  EXECUTIVE_SUMMARY.md  FEATURE_ROADMAP_README.md  GIT_PROJECT_PLAN.md  LICENSE  README.md  RESEARCH_CONNECTIONS.md  ROADMAP.md  ROADMAP_VISUALIZATION.md  dagger.py  dagger2.py  dagger3.py  docker-compose.yml  download_sample.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  streamlit_app.py
.github/workflows/: workflow.yml
harmonydagger/: __init__.py  __main__.py  benchmark.py  cli.py  common.py  core.py  ensemble.py  file_operations.py  gpu.py  phase.py  psychoacoustics.py  robustness.py  temporal_masking.py  verify.py  visualization.py  vocal_mode.py  wav_utils.py
tests/: test_benchmark.py  test_ensemble.py  test_file_operations.py  test_format_support.py  test_gpu.py  test_parallel_processing.py  test_phase.py  test_psychoacoustics.py  test_robustness.py  test_temporal_masking.py  test_verify.py  test_vocal_mode.py
