[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harmonydagger"
version = "0.1.0"
description = "A psychoacoustic noise generation tool for audio files"
readme = "README.md"
authors = [
    {name = "HarmonyDagger Team", email = "example@example.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "soundfile>=0.10.0",
    "matplotlib>=3.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.5b2",
    "isort>=5.9.1",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/harmonydagger"
"Bug Tracker" = "https://github.com/yourusername/harmonydagger/issues"

[project.scripts]
harmonydagger = "harmonydagger.__main__:main"
