[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harmonydagger"
version = "0.2.0"
description = "Making music unlearnable for generative AI with psychoacoustic noise"
readme = "README.md"
authors = [
    {name = "HarmonyDagger Team"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["audio", "music", "generative-ai", "protection", "privacy"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "soundfile>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.257",
    "build>=0.8.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/harmonydagger"
"Bug Tracker" = "https://github.com/yourusername/harmonydagger/issues"

[project.scripts]
harmonydagger = "harmonydagger.__main__:main"

[tool.setuptools]
packages = ["harmonydagger"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.ruff]
target-version = "py38"
src = ["harmonydagger"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["harmonydagger"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]
